test/invalid/baseline/inherit-readonly.txt
Syntax error at line 2, since `interface Claudine`:
  inherit readonly attribute DOMString maya;
          ^ Inherited attributes cannot be read-only
